--- a/src/styles/partials/variables.module.scss
+++ b/src/styles/partials/variables.module.scss
@@ -1,5 +1,8 @@
-$off-white: #F1ECCE;
-$light-blue: #9FC2CC;
-$blue: #1B5299;
-$purple: #694D75;
+$off-white: #F6F0ED;
+$orange: #ea3c12;
+$gold: #ddb967;
+$sea-green: #00a6a6;
+$purple: #4d243d;
 $black: #040303;
+$box-shadow-grey: #CBCED1;
+$error-status: #cc0000;
