--- a/src/styles/components/Vote.module.scss
+++ b/src/styles/components/Vote.module.scss
@@ -32,7 +32,7 @@
     display: flex;
     flex-direction: column;
     border-bottom: 1px solid $black;
-    margin: 1rem;
+    margin: 1rem 2rem;
     padding-bottom: .5rem;
   }
 
@@ -42,6 +42,8 @@
     font-weight: 700;
     color: $purple;
     margin: 0;
+    margin-right: auto;
+    padding-left: 1rem;
     
   }
 
@@ -50,6 +52,7 @@
     line-height: 1.0625rem;
     color: $black;
     margin: .5rem auto 0 1rem;
+    padding-left: 1rem;
   }
 
   &__desc {
@@ -83,3 +86,6 @@
     }
   }
 }
+
+
+
