--- a/src/styles/components/Vote.module.scss
+++ b/src/styles/components/Vote.module.scss
@@ -23,8 +23,8 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  gap: 1rem;
   background-color: $off-white;
-  margin: 1rem;
   border-radius: .25rem;
   box-shadow: 14px 14px 20px $box-shadow-grey, -14px -14px 20px #ebe9e8;
 
@@ -86,6 +86,5 @@
     }
   }
 }
-
 
 
